--- a/public/style.css
+++ b/public/style.css
@@ -11,7 +11,8 @@ body{
 
 #all-buttons{
     display: flex;
-    flex-direction: row
+    flex-direction: row;
+    margin-right: 100px;
 }
 
 div[color="green"] {
@@ -25,4 +26,42 @@ div[color="red"] {
 }
 div[color="yellow"] {
     background: yellow
+}
+
+.heading{
+ font-size: 25px;
+ text-align: center;
+}
+
+
+.light-button{
+    height: 80px;
+    width: 80px;
+    border-radius: 40px;
+    margin: 5px;
+    opacity: 0.2;
+   
+}
+
+#board{
+    /* width: 400px; */
+    /* height: 200px; */
+    /* margin: 10px; */
+    display: flex;
+    padding: 20px;
+    width: fit-content;
+   
+}
+
+.on{
+    opacity: 1 !important
+}
+
+#top-row{
+    display:flex
+}
+
+#update{
+    height: 30px;
+    width: 100%;
 }
